--- a/src/app/Componente/editar-mascota/editar-mascota.html
+++ b/src/app/Componente/editar-mascota/editar-mascota.html
@@ -1,1 +1,43 @@
-<p>editar-mascota works!</p>
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title">
+                Editar Mascota
+            </h2>
+            <form>
+                
+                    <legend>Editar mascota</legend>
+                    <div class="mb-3">
+                        <label for="idMascota" class="form-label">ID</label>
+                        <input type="text" name="idMascota" class="form-control" placeholder="Ingresa el id" [(ngModel)]="m.idMascota">
+                    </div>
+                    <div class="mb-3">
+                        <label for="nombreMascota" class="form-label">NOMBRE</label>
+                        <input type="text" name="nombreMascota" class="form-control" placeholder="Ingresa el nombre de la mascota" [(ngModel)]="m.nombreMascota">
+                    </div>
+                    <div class="mb-3">
+                        <label for="especie" class="form-label">ESPECIE</label>
+                        <input type="text" name="especie" class="form-control" placeholder="Ingresa la especie" [(ngModel)]= "m.especie">
+                    </div>
+                    <div class="mb-3">
+                        <label for="edadMascota" class="form-label">EDAD</label>
+                        <input type="text" name="edadMascota" class="form-control" placeholder="Ingresa la edad de la mascota" [(ngModel)]= "m.edadMascota">
+                    </div>                   
+                    <div class="mb-3">
+                    <label for="propietarioId" class="form-label">PROPIETARIO</label>
+                       <p>Propietario actual: {{ m.propietarioId?.nombre || 'Sin propietario' }}</p>
+
+                    <select class="form-control" name="propietarioId" [(ngModel)]="propietarioIdSolo" required>
+                       <option value="0" disabled>Selecciona un propietario</option>
+                       <option *ngFor="let p of propietarios" [value]="p.idPropietario">
+                        {{ p.nombre }}
+                       </option>
+                    </select>
+
+                    </div>
+                    <button class="btn btn-primary btn-lg" type="button" (click)="editarM()">Editar</button>
+                
+                </form>
+        </div>
+    </div>
+</div>
