--- a/src/app/Componente/editar-mascota/editar-mascota.html
+++ b/src/app/Componente/editar-mascota/editar-mascota.html
@@ -4,6 +4,7 @@
             <h2 class="card-title">
                 Editar Mascota
             </h2>
+            <div class="card-body">
             <form>
                 
                     <legend>Editar mascota</legend>
@@ -38,6 +39,7 @@
                     <button class="btn btn-primary btn-lg" type="button" (click)="editarM()">Editar</button>
                 
                 </form>
+            </div>
         </div>
     </div>
 </div>
