--- a/src/app/Componente/listar/listar.html
+++ b/src/app/Componente/listar/listar.html
@@ -26,7 +26,7 @@
                                 <td>{{p.edad}}</td>
                                 <td>{{p.genero}}</td>
                                 <td><button class="btn btn-outline-warning" (click)="editar(p.idPropietario)">Editar</button></td>
-                                <td><button class="btn btn-outline-danger">Eliminar</button></td>
+                                <td><button class="btn btn-outline-danger" (click)="eliminar(p.idPropietario)">Eliminar</button></td>
                             </tr>
                         }
                     </tbody>
